Revision to presentation, script to generate pdf

--- a/presentation/assets/presentation.css
+++ b/presentation/assets/presentation.css
@@ -48,7 +48,8 @@ ol {
 
 ul {
     margin: 1em 0;
-    padding: 0 0 0 1em;
+    padding: 0 0 0 1.5em;
+    line-height: 1;
 }
 
 img {
@@ -116,32 +117,32 @@ blockquote {
 }
 
 .remark-slide-content h1 {
-    font-size: 56px;
-    color: #00989e;
-}
-
-.remark-slide-content h2 {
     font-size: 48px;
     color: #00989e;
 }
 
-.remark-slide-content h3 {
+.remark-slide-content h2 {
     font-size: 40px;
     color: #00989e;
 }
 
-.remark-slide-content h4 {
+.remark-slide-content h3 {
     font-size: 36px;
     color: #00989e;
 }
 
-.remark-slide-content h5 {
+.remark-slide-content h4 {
     font-size: 30px;
     color: #00989e;
 }
 
-.remark-slide-content h6 {
+.remark-slide-content h5 {
     font-size: 24px;
+    color: #00989e;
+}
+
+.remark-slide-content h6 {
+    font-size: 18px;
     color: #00989e;
 }
 
