--- a/presentation/assets/presentation.css
+++ b/presentation/assets/presentation.css
@@ -23,13 +23,13 @@ body {
 }
 
 a {
-    color: #00989e;
+    color: #0073AE;
     text-decoration: none;
     font-weight: 500;
 }
 
 a:hover, a:focus {
-    color: #00989e;
+    color: #0073AE;
     text-decoration: underline;
 }
 
@@ -101,8 +101,8 @@ blockquote {
 .footnote {  
   position:absolute;
   bottom: 3em;
-  left: 7em;
-  font-size: 0.7em;
+  left: 15em;
+  font-size: 0.5em;
  }
 
  .white {
@@ -187,11 +187,12 @@ blockquote {
 }
 
 .remark-code-line {
-    white-space: normal;
+    white-space: pre;
     background-color: #000;
     border: 1px solid #000;
     color: #fff;
     padding: 0 1em;
+    font-size: 80%;
 }
 
 .remark-slide-content:after {
